--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -4,8 +4,12 @@
 <meta charset="utf-8">
 <title>MMASGIS</title>
 <link rel="stylesheet" href="extjs/resources/css/ext-all.css">
+<script type="text/javascript" src="javascripts/encryption.js"></script>
 <script src="extjs/ext-all-debug.js"></script>
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+	<script type="text/javascript" src="app/model/Utente.js"></script>
+<script type="text/javascript" src="javascripts/constants.js"></script>
+<script type="text/javascript" src="app/view/Login.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
@@ -20,7 +24,6 @@
 <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet-src.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css">
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-        <script type="text/javascript">
 	Ext.Loader.setConfig({
 		        enabled: true
 		    });
@@ -38,7 +41,7 @@
 <script type="text/javascript" src="geojson/regioni.geojson"></script>
 <script type="text/javascript"src="geojson/comuni.geojson"></script>
 <script  type="text/javascript"src="geojson/cap.geojson"></script>
-<script src="geojson/province.geojson"></script>
-<script src="javascripts/mapping_shp.js"></script>
+<script type="text/javascript" src="geojson/province.geojson"></script>
+<script type="text/javascript" src="javascripts/mapping_shp.js"></script>
 </body>
 </html>
