--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -20,7 +20,7 @@
 <body>
 <div id="map" style="width: 1000px; height: 700px"></div>
 <div id="gmap" style="width: 1000px; height: 700px"></div>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="mmasgis.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet-src.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css">
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
