gli utenti si loggano

--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -9,6 +9,9 @@
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
 	<script type="text/javascript" src="app/model/Utente.js"></script>
 <script type="text/javascript" src="javascripts/constants.js"></script>
+<!-- Gritter Ext JS Extension (https://github.com/zir/ext-growl) -->
+<link rel="stylesheet" type="text/css" href="styles/ux/gritter/css/ext-growl.css" />
+	<script type="text/javascript" src="script/ux/ext-growl.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
