ripristinato dopo disastro

--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -9,9 +9,8 @@
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
 	<script type="text/javascript" src="app/model/Utente.js"></script>
 <script type="text/javascript" src="javascripts/constants.js"></script>
-<!-- Gritter Ext JS Extension (https://github.com/zir/ext-growl) -->
-<link rel="stylesheet" type="text/css" href="styles/ux/gritter/css/ext-growl.css" />
-	<script type="text/javascript" src="script/ux/ext-growl.js"></script>
+	<link rel="stylesheet" type="text/css" href="style/ux/gritter/css/ext-growl.css" />
+	<script type="text/javascript" src="javascripts/ux/ext-growl.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
@@ -42,9 +41,9 @@
             window.onload= loadMap;
         </script>
 <script type="text/javascript" src="geojson/regioni.geojson"></script>
-<script type="text/javascript"src="geojson/comuni.geojson"></script>
+<!--script type="text/javascript"src="geojson/comuni.geojson"></script>
 <script  type="text/javascript"src="geojson/cap.geojson"></script>
-<script type="text/javascript" src="geojson/province.geojson"></script>
+<script type="text/javascript" src="geojson/province.geojson"></script-->
 <script type="text/javascript" src="javascripts/mapping_shp.js"></script>
 </body>
 </html>
