--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -20,9 +20,9 @@
 
 </head>
 <body>
-<div id="map" style="width: 1000px; height: 700px"></div>
+<div id="map" style="width: 100%; height: 100%"></div>
 <div id="gmap" style="width: 1000px; height: 700px"></div>
-<script type="text/javascript" src="mmasgis.js"></script>
+<script type="text/javascript" src="mappanel.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet-src.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css">
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
@@ -38,7 +38,7 @@
                 };
 //                var map = new google.maps.Map(document.getElementById("map"),myOptions);
             };
-            window.onload= loadMap;
+           // window.onload= loadMap;
         </script>
 <script type="text/javascript" src="geojson/regioni.geojson"></script>
 <!--script type="text/javascript"src="geojson/comuni.geojson"></script>
