--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -20,9 +20,8 @@
 
 </head>
 <body>
-<div id="map" style="width: 100%; height: 100%"></div>
+<!--div id="map" style="width: 100%; height: 100%"></div-->
 <div id="gmap" style="width: 1000px; height: 700px"></div>
-<script type="text/javascript" src="mappanel.js"></script>
 <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet-src.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.5/leaflet.css">
         <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
@@ -44,6 +43,7 @@
 <!--script type="text/javascript"src="geojson/comuni.geojson"></script>
 <script  type="text/javascript"src="geojson/cap.geojson"></script>
 <script type="text/javascript" src="geojson/province.geojson"></script-->
-<script type="text/javascript" src="javascripts/mapping_shp.js"></script>
+<!--script type="text/javascript" src="javascripts/mapping_shp.js"></script-->
+<script type="text/javascript" src="mapped_view.js"></script>
 </body>
 </html>
