cominciamo a selezionare, 'c'è una grid per le utb selezionate, che non mostra dati

--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -44,6 +44,8 @@
 <script  type="text/javascript"src="geojson/cap.geojson"></script>
 <script type="text/javascript" src="geojson/province.geojson"></script-->
 <!--script type="text/javascript" src="javascripts/mapping_shp.js"></script-->
+<!--script type="text/javascript" src="javascripts/model/utb.js">
+	<script type="text/javascript" src="javascripts/store/utb.js"-->
 <script type="text/javascript" src="mapped_view.js"></script>
 </body>
 </html>
