--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -46,6 +46,6 @@
 <!--script type="text/javascript" src="javascripts/mapping_shp.js"></script-->
 <!--script type="text/javascript" src="javascripts/model/utb.js">
 	<script type="text/javascript" src="javascripts/store/utb.js"-->
-<script type="text/javascript" src="mapped_view.js"></script>
+<script type="text/javascript" src="mmasgis.js"></script>
 </body>
 </html>
