ora abbiamo l'abilitazione al multilingua, il login è stato migliorato con la funzione di callback

--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="javascripts/constants.js"></script>
 	<link rel="stylesheet" type="text/css" href="style/ux/gritter/css/ext-growl.css" />
 	<script type="text/javascript" src="javascripts/ux/ext-growl.js"></script>
+<script type="text/javascript" src="javascripts/model/user.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
@@ -44,8 +45,9 @@
 <script  type="text/javascript"src="geojson/cap.geojson"></script>
 <script type="text/javascript" src="geojson/province.geojson"></script-->
 <!--script type="text/javascript" src="javascripts/mapping_shp.js"></script-->
-<!--script type="text/javascript" src="javascripts/model/utb.js">
-	<script type="text/javascript" src="javascripts/store/utb.js"-->
+<script type="text/javascript" src="javascripts/model/utb.js"></script>
+	<!--script type="text/javascript" src="javascripts/store/utb.js"-->
+<script type="text/javascript" src="locals/it.js"></script>
 <script type="text/javascript" src="mmasgis.js"></script>
 </body>
 </html>
