--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" type="text/css" href="style/ux/gritter/css/ext-growl.css" />
 	<script type="text/javascript" src="javascripts/ux/ext-growl.js"></script>
 <script type="text/javascript" src="javascripts/model/user.js"></script>
+<script type="text/javascript" src="app/model/Census.js"></script>
+<script type="text/javascript" src="app/store/census.js"></script>
+<script type="text/javascript" src="app/view/Census.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
