--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="it-IT">
 <head>
 <link href='//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.css' rel='stylesheet' />
 <meta charset="utf-8">
