--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -12,10 +12,13 @@
 	<link rel="stylesheet" type="text/css" href="style/ux/gritter/css/ext-growl.css" />
 	<script type="text/javascript" src="javascripts/ux/ext-growl.js"></script>
 <script type="text/javascript" src="javascripts/model/user.js"></script>
+<script type="text/javascript" src="app/model/Pv.js"></script>
 <script type="text/javascript" src="app/model/Census.js"></script>
 <script type="text/javascript" src="app/store/census.js"></script>
 <script type="text/javascript" src="app/view/Census.js"></script>
+<script type="text/javascript" src="app/store/Pv.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
+<script type="text/javascript" src="app/view/Pv.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
