--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -2,10 +2,11 @@
 <head>
 <link href='//api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.css' rel='stylesheet' />
 <meta charset="utf-8">
-<title>MMASGIS</title>
+<title>MMASGIS 5</title>
 <link rel="stylesheet" href="extjs/resources/css/ext-all.css">
 <script type="text/javascript" src="javascripts/encryption.js"></script>
 <script src="extjs/ext-all-debug.js"></script>
+<link rel="stylesheet" href="stylesheets/style.css">
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
 	<script type="text/javascript" src="app/model/Utente.js"></script>
 <script type="text/javascript" src="javascripts/constants.js"></script>
@@ -19,6 +20,7 @@
 <script type="text/javascript" src="app/store/Pv.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
 <script type="text/javascript" src="app/view/Pv.js"></script>
+<script type="text/javascript" src="app/view/anagrafica.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
