--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -20,6 +20,7 @@
 <script type="text/javascript" src="app/store/Pv.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
 <script type="text/javascript" src="app/view/Pv.js"></script>
+<script type="text/javascript" src="app/view/Attribute.js"></script>
 <script type="text/javascript" src="app/view/anagrafica.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
