--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="app/model/Census.js"></script>
 <script type="text/javascript" src="app/store/census.js"></script>
 <script type="text/javascript" src="app/view/Census.js"></script>
+<script type="text/javascript" src="app/model/attribute.js"></script>
 <script type="text/javascript" src="app/store/Pv.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
 <script type="text/javascript" src="app/view/Pv.js"></script>
