--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -23,6 +23,8 @@
 <script type="text/javascript" src="app/view/Pv.js"></script>
 <script type="text/javascript" src="app/view/Attribute.js"></script>
 <script type="text/javascript" src="app/view/anagrafica.js"></script>
+<script type="text/javascript" src="app/view/filterTab.js"></script>
+<script type="text/javascript" src="app/view/Filter.js"></script>
 <link href="stylesheets/style_map.css" type="text/css" rel="stylesheet" />
 <!--[if lte IE 8]>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
