--- a/mmasgis/public/index.html
+++ b/mmasgis/public/index.html
@@ -20,7 +20,6 @@
 <script type="text/javascript" src="app/model/attribute.js"></script>
 <script type="text/javascript" src="app/store/Pv.js"></script>
 <script type="text/javascript" src="app/view/Login.js"></script>
-<script type="text/javascript" src="app/view/Pv.js"></script>
 <script type="text/javascript" src="app/view/Attribute.js"></script>
 <script type="text/javascript" src="app/view/anagrafica.js"></script>
 <script type="text/javascript" src="app/view/filterTab.js"></script>
@@ -50,6 +49,12 @@
                   mapTypeId: google.maps.MapTypeId.ROADMAP
                 };
 //                var map = new google.maps.Map(document.getElementById("map"),myOptions);
+var map = L.mapbox.map('map-body', 'arpho.map-nw38cgmq').setView([41.9, 12.48], 7);
+
+L.mapbox.tileLayer('arpho.map-nw38cgmq', {
+			maxZoom: 18,
+			attribution: 'Tiles Courtesy of <a href="http://www.mapbox.com/" target="_blank">MapBox</a>. Map data (c) <a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> contributors, CC-BY-SA.'
+		}).addTo(map);
             };
            // window.onload= loadMap;
         </script>
