--- a/mmasgis/public/gmap.html
+++ b/mmasgis/public/gmap.html
@@ -1,11 +1,9 @@
 <html lang="it-IT">
 <head>
   <title>MMASGIS 5-gmapped</title>
-  <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
-	<script type="text/javascript" src="http://openlayers.org/api/OpenLayers.js"></script>
 	<link rel="stylesheet" href="extjs/resources/css/ext-all.css">
 	<script type="text/javascript" src="javascripts/encryption.js"></script>
-	<script src="extjs/ext-all-debug.js"></script>
+	<script src="extjs/ext-all-dev.js"></script>
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<script type="text/javascript" src="app/model/Utente.js"></script>
 <script type="text/javascript" src="javascripts/constants.js"></script>
@@ -28,6 +26,8 @@
 <script type="text/javascript" src="app/view/filterGridMaker.js"></script>
 <script type="text/javascript" src="locals/it.js"></script>
 <script type="text/javascript" src="mmasgis.js"></script>
+<script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
+<script type="text/javascript" src="http://openlayers.org/api/OpenLayers.js"></script>
 	</head>
 	<body>
 	  <div style="width:79.5%; height:100%" id="map"></div>
