--- a/mmasgis/public/gmap.html
+++ b/mmasgis/public/gmap.html
@@ -1,9 +1,10 @@
 <html lang="it-IT">
 <head>
-  <title>MMASGIS 5-gmapped</title>
+  <title>MMASGIS 5</title>
 	<link rel="stylesheet" href="extjs/resources/css/ext-all.css">
 	<script type="text/javascript" src="javascripts/encryption.js"></script>
-	<script src="extjs/ext-all-dev.js"></script>
+	<script type="text/javascript" src="extjs/ext.js"></script>
+	<script type="text/javascript" src="extjs/ext-all.js"></script>
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<script type="text/javascript" src="app/model/Utente.js"></script>
 <script type="text/javascript" src="javascripts/constants.js"></script>
