--- a/mmasgis/public/gmap.html
+++ b/mmasgis/public/gmap.html
@@ -2,6 +2,7 @@
 <head>
   <title>MMASGIS 5</title>
 	<link rel="stylesheet" href="extjs/resources/css/ext-all.css">
+	<link rel="stylesheet" href="stylesheets/mmasgis.css">
 	<script type="text/javascript" src="javascripts/encryption.js"></script>
 	<script type="text/javascript" src="extjs/ext-all-debug.js"></script>
 	<link rel="stylesheet" href="stylesheets/style.css">
